force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FreeDemurrageTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FreeDemurrageTime__c</fullName>
    <inlineHelpText>Free demurrage means a cargo can be placed on CY or CFS for free of charge</inlineHelpText>
    <label>FREE DEMURRAGE TIME</label>
    <type>Date</type>
</CustomField>