force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FreeDetentionTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FreeDetentionTime__c</fullName>
    <inlineHelpText>Free detention means container can be kept by consignee for free after pickup.</inlineHelpText>
    <label>FREE DETENTION TIME</label>
    <type>Date</type>
</CustomField>