force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Freight_and_charges__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Freight_and_charges__c</fullName>
    <label>House Freight and charges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FREIGHT COLLECT AS ARRANGED</fullName>
            </value>
            <value>
                <fullName>FREIGHT PREPAID AS ARRANGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>