force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Freight_Collect_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Freight_Collect_Prepaid__c</fullName>
    <label>House Freight Collect/Prepaid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FREIGHT COLLECT</fullName>
            </value>
            <value>
                <fullName>FREIGHT PREPAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>