force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FREIGHT_MEMO_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FREIGHT_MEMO_PASSWORD__c</fullName>
    <label>FREIGHT MEMO PASSWORD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>