force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GMTGapTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GMTGapTime__c</fullName>
    <inlineHelpText>Time Difference from Greenwich Mean Time</inlineHelpText>
    <label>GMT Gap Time(Old)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>