force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GOODS_ATTACHMENT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GOODS_ATTACHMENT__c</fullName>
    <label>GOODS ATTACHMENT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>