force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GoodsDescriptiononAN__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsDescriptiononAN__c</fullName>
    <defaultValue>&quot;AS PER BILL&quot;</defaultValue>
    <label>Goods Description on AN</label>
    <type>TextArea</type>
</CustomField>