force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GoodsPurchasingOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsPurchasingOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS PURCHASING ORDER ID</label>
    <referenceTo>clofor_com_cfs__GoodsPurchasingOrder__c</referenceTo>
    <relationshipName>ShipmentOrder</relationshipName>
    <type>Lookup</type>
</CustomField>