force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GoukeiHanbaiKingakuUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoukeiHanbaiKingakuUSD__c</fullName>
    <label>SUM OF SELLING(USD)</label>
    <summarizedField>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__SellAmountUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>