force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>