force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Gross_Weight_RTON__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Gross_Weight_RTON__c</fullName>
    <formula>IF( ISBLANK( clofor_com_cfs__weight__c ) , 0, clofor_com_cfs__weight__c/1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross_Weight_RTON</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>