force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossWeight__c</fullName>
    <deprecated>true</deprecated>
    <label>Gross Weight</label>
    <type>TextArea</type>
</CustomField>