force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__GrossWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossWeightUnit__c</fullName>
    <label>Gross Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__GrossWeightUnit</valueSetName>
    </valueSet>
</CustomField>