force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__HAWB__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HAWB__c</fullName>
    <label>HAWB No.</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>