force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__HBL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL__c</fullName>
    <inlineHelpText>Import: Refer to th HB/L and input. Export: When ETD is set, automatically generates H B/L Number with the prefix in initial setting. HB/L Number can be modified after insertion.</inlineHelpText>
    <label>H B/L NUMBER</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>