force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__HBL_Number_SEA_AIR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL_Number_SEA_AIR__c</fullName>
    <formula>IF ( ISNULL(clofor_com_cfs__HBL__c) || ISBLANK(clofor_com_cfs__HBL__c) ,  clofor_com_cfs__HAWB__c , clofor_com_cfs__HBL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HBL Number（SEAorAIR）</label>
    <type>Text</type>
</CustomField>