force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__HouseBookingNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HouseBookingNo__c</fullName>
    <label>HOUSE BOOKING NO</label>
    <type>TextArea</type>
</CustomField>