force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__HSCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HSCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Code</label>
    <referenceTo>clofor_com_cfs__HS_Code__c</referenceTo>
    <relationshipName>HBL_SHIPMENTS</relationshipName>
    <type>Lookup</type>
</CustomField>