force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Id, &apos;S&apos; &amp;  clofor_com_cfs__WkInitial__c  &amp; Name , &apos;_top&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FORWARDING ID</label>
    <type>Text</type>
</CustomField>