force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__IMDGClassCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IMDGClassCode__c</fullName>
    <label>IMDG Class Code</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>