force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__InvoicePrintDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoicePrintDate__c</fullName>
    <label>INVOICE ISSUE DATE</label>
    <type>Date</type>
</CustomField>