force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Item__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Item__c</fullName>
    <inlineHelpText>Describe the Goods as need to be written in B/L</inlineHelpText>
    <label>GOODS</label>
    <type>TextArea</type>
</CustomField>