force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__JobRequestID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JobRequestID__c</fullName>
    <label>JOB REQUEST ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>