force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LicenseofManufacturedCountry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LicenseofManufacturedCountry__c</fullName>
    <label>CERTIFICATE OF ORIGIN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし(No)</fullName>
                <default>true</default>
                <label>なし(No)</label>
            </value>
            <value>
                <fullName>あり(Yes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>