force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LoadAddressContact__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadAddressContact__c</fullName>
    <formula>IF (clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadTEL__c = NULL, &quot;&quot;, &apos;TEL: &apos;&amp; clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadTEL__c) &amp; IF (clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadFAX__c = NULL, &quot;&quot;, &apos; FAX: &apos;&amp; clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadFAX__c)
 

/*
&apos;TEL: &apos; &amp;  
clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadTEL__c &amp; &apos; FAX: &apos; &amp; clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadFAX__c
*/</formula>
    <label>CARGO LOADING WAREHOUSE TEL/FAX(LOCAL)</label>
    <type>Text</type>
</CustomField>