force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LoadAddressContact_english__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadAddressContact_english__c</fullName>
    <deprecated>true</deprecated>
    <formula>null</formula>
    <label>CARGO LOADING WAREHOUE TEL/FAX(ENG)</label>
    <type>Text</type>
</CustomField>