force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LoadingTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadingTime__c</fullName>
    <label>MANIFEST SUBMISSION DATE</label>
    <type>Date</type>
</CustomField>