force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LoadLocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Refer to Master A/N to confirm about loading Warehouse</inlineHelpText>
    <label>CARGO LOADING WAREHOUSE(LOCAL)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__LoadLocation__c.clofor_com_cfs__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__LoadLocation__c</referenceTo>
    <relationshipLabel>F/TMS S/O</relationshipLabel>
    <relationshipName>LoadLocation</relationshipName>
    <type>Lookup</type>
</CustomField>