force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LoadLocation_English__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadLocation_English__c</fullName>
    <formula>clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadLocation_english__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CARGO LOADING WAREHOUSE(ENG)</label>
    <type>Text</type>
</CustomField>