force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LoadLocationPIC__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadLocationPIC__c</fullName>
    <formula>clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadLocationPIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIC OF WAREHOUSE</label>
    <type>Text</type>
</CustomField>