force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LockBaseDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LockBaseDate__c</fullName>
    <label>LOCK BASE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PayBaseDate</valueSetName>
    </valueSet>
</CustomField>