force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LockedTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LockedTime__c</fullName>
    <label>LOCKED TIME</label>
    <type>DateTime</type>
</CustomField>