force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__LockPlanDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LockPlanDate__c</fullName>
    <label>Lock Plan Date</label>
    <type>Date</type>
</CustomField>