force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__MA_N__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MA_N__c</fullName>
    <label>TOTAL AMOUNT OF M A/N</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>