force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Mail_Merge_Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mail_Merge_Company_Fax__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Company Fax</label>
    <type>Text</type>
</CustomField>