force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Mail_Merge_Local_Bank_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mail_Merge_Local_Bank_1__c</fullName>
    <description>Arrival Notice Bank account</description>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_Name_1__c &amp; BR() &amp; 
$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_1_Other__c &amp; $Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Account_No_1__c &amp; BR() &amp; 
$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_Account_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Local Bank 1</label>
    <type>Text</type>
</CustomField>