force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Mail_Merge_Local_Bank_2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mail_Merge_Local_Bank_2__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_Name_2__c &amp; BR() &amp; 
$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_2_Other__c &amp; $Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Account_No_2__c &amp; BR() &amp; 
$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Bank_Account_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Local Bank 2</label>
    <type>Text</type>
</CustomField>