force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Mail_Merge_Local_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mail_Merge_Local_Company_Address__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Company_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Local Company Address</label>
    <type>Text</type>
</CustomField>