force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Mailmerge_company_lo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mailmerge_company_lo__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Logo_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailmerge company lo</label>
    <type>Text</type>
</CustomField>