force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ManufacturedCountry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ManufacturedCountry__c</fullName>
    <label>PLACE OF ORIGIN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MYANMAR</fullName>
            </value>
            <value>
                <fullName>VIETNAM</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>MALAYSIA</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>TAIWAN</fullName>
            </value>
            <value>
                <fullName>THAILAND</fullName>
            </value>
            <value>
                <fullName>PHILIPPINES</fullName>
            </value>
            <value>
                <fullName>CAMBODIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>PAKISTAN</fullName>
            </value>
            <value>
                <fullName>BANGLADESH</fullName>
            </value>
            <value>
                <fullName>YEMEN</fullName>
            </value>
            <value>
                <fullName>SRI LANK</fullName>
            </value>
            <value>
                <fullName>TURKEY</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>RUSSIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>