force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Marks_and_Numbers__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Marks_and_Numbers__c</fullName>
    <inlineHelpText>Marks Attachment field is available for adding long list or attachment for Goods detail.</inlineHelpText>
    <label>Marks and Numbers</label>
    <type>TextArea</type>
</CustomField>