force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__MARKS_NUMBERS_ATTACHMENT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MARKS_NUMBERS_ATTACHMENT__c</fullName>
    <label>MARKS &amp; NUMBERS ATTACHMENT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>