force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Master_B_L__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Master_B_L__c</fullName>
    <label>M B/L NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>